finished mobile menu

--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
 <body>
     <header>
         <img src="assets/img/logo.png" alt="">
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">REGION</a></li>
-                <li><a href="#">ABOUT</a></li>
-            </ul>
-        </nav>
+        <div id="menu-bar">
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">REGION</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="menu-mobile">
+            <div id="menu-bar-mobile">
+                <div id="menu">
+                    <div id="bar1" class="bar"></div>
+                    <div id="bar2" class="bar"></div>
+                    <div id="bar3" class="bar"></div>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">REGION</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="menu-bg"></div>
+        </div>
     </header>
     <main>
         <section class="col col1">
@@ -50,5 +69,6 @@
                 </div>
         </section>
     </main>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
