--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/img/fotos/icons8-camelo-16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>Sahara</title>
 </head>
 <body>
     <header>
-        <img src="assets/img/fotos/icons8-camelo-60.png" alt="Camel">
+        <img src="assets/img/logo.png" alt="Camel">
         <div id="menu-bar">
             <nav>
                 <ul>
