--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <section class="col col1">
             <div class="title-content">
-                <h1>Sahara</h1>
+                <h1>Desert</h1>
                 <p>Lorem ipsum dolor sit amet consectetur elit. In reiciendis fuga blanditiis praesentium ullam error, enim perferendis quod vero consectetur a.</p>
                 <button>Explore</button>
             </div>
@@ -49,21 +49,21 @@
         <section class="col col2">
             <div class="row">
                 <div class="img img1">
-                    <h2>Western Desert</h2>
+                    <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet consectetur elit. </p>
                 </div>
                 <div class="img img2">
-                    <h2>Al Bagawat</h2>
+                    <h2>Dolor sit</h2>
                     <p>Lorem ipsum dolor sit amet consectetur elit. </p>
                 </div>
             </div>
                 <div class="row">
                     <div class="img img3">
-                        <h2>Pyramid of Giza</h2>
+                        <h2>Amet consectetur</h2>
                         <p>Lorem ipsum dolor sit amet consectetur elit. </p>
                     </div>
                     <div class="img img4">
-                        <h2>Kalahari Desert</h2>
+                        <h2>In reiciendis</h2>
                         <p>Lorem ipsum dolor sit amet consectetur elit. </p>
                     </div>
                 </div>
